--- a/assets/style.css
+++ b/assets/style.css
@@ -1,30 +1,26 @@
-.navbar {
-  background-color: #70b766;
-  font-weight: bolder;
+/* Gambar slide */
+.carousel-item img {
+  width: 100%;
+  height: auto;
+  max-height: fit-content;
 }
-
-section {
-  padding-top: 3rem;
-}
-
+/* Visi misi */
 .card {
   border-radius: 50px;
   text-align: center;
 }
 
-/*--------------------------------------------------------------
-# Portfolio
---------------------------------------------------------------*/
-.portfolio .portfolio-item {
+/* Kegiatan */
+.kegiatan .kegiatan-item {
   margin-bottom: 30px;
 }
-.portfolio #portfolio-flters {
+.kegiatan #kegiatan-flters {
   padding: 0;
   margin: 0 auto 20px auto;
   list-style: none;
   text-align: center;
 }
-.portfolio #portfolio-flters li {
+.kegiatan #kegiatan-flters li {
   cursor: pointer;
   display: inline-block;
   padding: 8px 15px 10px 15px;
@@ -37,22 +33,22 @@ section {
   transition: all 0.3s ease-in-out;
   border-radius: 3px;
 }
-.portfolio #portfolio-flters li:hover,
-.portfolio #portfolio-flters li.filter-active {
+.kegiatan #kegiatan-flters li:hover,
+.kegiatan #kegiatan-flters li.filter-active {
   color: #fff;
   background: #3b4ef8;
 }
-.portfolio #portfolio-flters li:last-child {
+.kegiatan #kegiatan-flters li:last-child {
   margin-right: 0;
 }
-.portfolio .portfolio-wrap {
+.kegiatan .kegiatan-wrap {
   transition: 0.3s;
   position: relative;
   overflow: hidden;
   z-index: 1;
   background: rgba(45, 64, 95, 0.6);
 }
-.portfolio .portfolio-wrap::before {
+.kegiatan .kegiatan-wrap::before {
   content: "";
   background: rgba(45, 64, 95, 0.6);
   position: absolute;
@@ -64,12 +60,13 @@ section {
   z-index: 2;
   opacity: 0;
 }
-.portfolio .portfolio-wrap img {
+.kegiatan .kegiatan-wrap img {
   max-height: fit-content;
+  height: auto;
   max-width: 100%;
   transition: all ease-in-out 0.3s;
 }
-.portfolio .portfolio-wrap .portfolio-info {
+.kegiatan .kegiatan-wrap .kegiatan-info {
   opacity: 0;
   position: absolute;
   top: 0;
@@ -84,99 +81,39 @@ section {
   align-items: flex-start;
   padding: 20px;
 }
-.portfolio .portfolio-wrap .portfolio-info h4 {
+.kegiatan .kegiatan-wrap .kegiatan-info h4 {
   font-size: 20px;
   color: #fff;
   font-weight: 600;
 }
-.portfolio .portfolio-wrap .portfolio-info p {
+.kegiatan .kegiatan-wrap .kegiatan-info p {
   color: rgba(255, 255, 255, 0.7);
   font-size: 14px;
   text-transform: uppercase;
   padding: 0;
   margin: 0;
-  font-style: italic;
+  font-style: bold;
 }
-.portfolio .portfolio-wrap .portfolio-links {
+.kegiatan .kegiatan-wrap .kegiatan-links {
   text-align: center;
   z-index: 4;
 }
-.portfolio .portfolio-wrap .portfolio-links a {
+.kegiatan .kegiatan-wrap .kegiatan-links a {
   color: #fff;
   margin: 0 5px 0 0;
   font-size: 28px;
   display: inline-block;
   transition: 0.3s;
 }
-.portfolio .portfolio-wrap .portfolio-links a:hover {
+.kegiatan .kegiatan-wrap .kegiatan-links a:hover {
   color: #9da7fc;
 }
-.portfolio .portfolio-wrap:hover::before {
+.kegiatan .kegiatan-wrap:hover::before {
   opacity: 1;
 }
-.portfolio .portfolio-wrap:hover img {
+.kegiatan .kegiatan-wrap:hover img {
   transform: scale(1.2);
 }
-.portfolio .portfolio-wrap:hover .portfolio-info {
+.kegiatan .kegiatan-wrap:hover .kegiatan-info {
   opacity: 1;
-}
-
-/*--------------------------------------------------------------
-  # Portfolio Details
-  --------------------------------------------------------------*/
-.portfolio-details {
-  padding-top: 40px;
-}
-.portfolio-details .portfolio-details-slider img {
-  width: 50%;
-}
-.portfolio-details .portfolio-details-slider .swiper-pagination {
-  margin-top: 20px;
-  position: relative;
-}
-.portfolio-details
-  .portfolio-details-slider
-  .swiper-pagination
-  .swiper-pagination-bullet {
-  width: 12px;
-  height: 12px;
-  background-color: #fff;
-  opacity: 1;
-  border: 1px solid #3b4ef8;
-}
-.portfolio-details
-  .portfolio-details-slider
-  .swiper-pagination
-  .swiper-pagination-bullet-active {
-  background-color: #3b4ef8;
-}
-.portfolio-details .portfolio-info {
-  padding: 30px;
-  box-shadow: 0px 0 30px rgba(45, 64, 95, 0.08);
-}
-.portfolio-details .portfolio-info h3 {
-  font-size: 22px;
-  font-weight: 700;
-  margin-bottom: 20px;
-  padding-bottom: 20px;
-  border-bottom: 1px solid #eee;
-}
-.portfolio-details .portfolio-info ul {
-  list-style: none;
-  padding: 0;
-  font-size: 15px;
-}
-.portfolio-details .portfolio-info ul li + li {
-  margin-top: 10px;
-}
-.portfolio-details .portfolio-description {
-  padding-top: 30px;
-}
-.portfolio-details .portfolio-description h2 {
-  font-size: 26px;
-  font-weight: 700;
-  margin-bottom: 20px;
-}
-.portfolio-details .portfolio-description p {
-  padding: 0;
 }
