--- a/assets/style.css
+++ b/assets/style.css
@@ -2,7 +2,7 @@
 .carousel-item img {
   width: 100%;
   height: auto;
-  max-height: fit-content;
+  max-height: 120vh;
 }
 /* Visi misi */
 .card {
@@ -49,7 +49,7 @@
   background: rgba(45, 64, 95, 0.6);
 }
 .kegiatan .kegiatan-wrap::before {
-  content: "";
+  content: '';
   background: rgba(45, 64, 95, 0.6);
   position: absolute;
   left: 0;
